<resources>
    <string name="app_name">StrongLifts</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_signin">Sign In</string>
    <string name="action_notes">Notes</string>
    <string name="action_export">Export</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="action_unlockPP">Unlock Power Pack</string>
    <string name="tv_weightUnit">Weight Unit</string>
    <string name="tv_kilograms">Kilograms</string>
    <string name="tv_plates_bar">Plates &amp; Bar</string>
    <string name="et_stronglifts_title">StrongLifts 5x5 Guide</string>
    <string name="et_stronglifts_text">For more info on how to get stronger, build muscle or lose weight, check out our guide.</string>
    <string name="et_copyright">Copyright © 2007-2016 StrongLifts\nAll Rights Reserved - v2.1.17</string>
    <string name="action_deleteWorkout">Delete Workout</string>
    <string name="action_share">Share</string>
    <string name="action_switch">Switch to Workout %s</string>
    <string name="b_finish">FINISH</string>
    <string name="b_edit_exercises">EDIT EXERCISES</string>
    <string name="tv_body_weight">Body Weight</string>
    <string name="tv_squat_exercise">Squat</string>
    <string name="tv_ohp_exercise">Overhead Press</string>
    <string name="tv_bp_exercise">Bench Press</string>
    <string name="tv_row_exercise">Barbell Row</string>
    <string name="tv_dl_exercise">Deadlift</string>
    <string name="tv_squat_exercise_short">Squat</string>
    <string name="tv_ohp_exercise_short">OH Press</string>
    <string name="tv_bp_exercise_short">Bench</string>
    <string name="tv_row_exercise_short">Row</string>
    <string name="tv_dl_exercise_short">Deadlift</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_assistance_exercises">Assistance Exercises</string>
    <string name="settings_google_fit">Google Fit</string>
    <string name="settings_title_settings">Settings</string>
    <string name="settings_title_backup_reset">Backup &amp; Reset</string>
    <string name="settings_export">Export</string>
    <string name="settings_restore">Restore</string>
    <string name="settings_reset">Reset</string>
    <string name="li_workout_a">Workout A</string>
    <string name="li_workout_b">Workout B</string>

</resources>
