<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stanislav.tabswithfragment.CreateWorkoutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/linearLayoutSquat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        >


        <TextView
            android:id="@+id/tvSquat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_squat_exercise"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/tvSquatWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg_selector"
            android:clickable="true"
            android:focusable="false"
            android:maxLength="20"
            android:text="5x5 97.5KG"
            android:layout_alignBottom="@+id/tvSquat"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView28"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="0"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/bg_red"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:onClick="onClick"
            />
        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="0"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/bg_red"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView29"
            android:layout_toStartOf="@+id/textView29"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/textView29"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="0"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/bg_red"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            />
        <TextView
            android:id="@+id/textView30"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="0"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/bg_red"
            android:layout_marginRight="34dp"
            android:layout_marginEnd="34dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView39"
            android:layout_toStartOf="@+id/textView39"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="0"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/bg_red"
            android:layout_marginRight="22dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp"
            android:id="@+id/textView39"
            android:onClick="onClick"/>
    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/linearLayoutOHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            >


            <TextView
                android:id="@+id/tvExercise2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ohp_exercise"
                android:textColor="@color/black"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/tvExerciseWeight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg_selector"
                android:clickable="true"
                android:focusable="false"
                android:maxLength="20"
                android:text="5x5 50KG"
                android:layout_alignBottom="@+id/tvExercise2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:id="@+id/textView31"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/textView32"
                android:layout_toStartOf="@+id/textView32"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView32"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:id="@+id/textView33"
                android:layout_marginRight="31dp"
                android:layout_marginEnd="31dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/textView38"
                android:layout_toStartOf="@+id/textView38"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:layout_marginRight="22dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="22dp"
                android:id="@+id/textView38"
                android:onClick="onClick"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/linearLayoutDL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            >


            <TextView
                android:id="@+id/tvExercise3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dl_exercise"
                android:textColor="@color/black"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/tvExerciseWeight3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_bg_selector"
                android:clickable="true"
                android:focusable="false"
                android:maxLength="20"
                android:text="5x5 50KG"
                android:layout_alignBottom="@+id/tvExercise3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:id="@+id/textView34"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:layout_marginRight="33dp"
                android:layout_marginEnd="33dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/textView35"
                android:layout_toStartOf="@+id/textView35"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_red"
                android:id="@+id/textView35"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/textView36"
                android:background="@drawable/bg_red"
                android:layout_marginRight="32dp"
                android:layout_marginEnd="32dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/textView37"
                android:layout_toStartOf="@+id/textView37"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="0"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginRight="22dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_red"
                android:layout_marginEnd="22dp"
                android:id="@+id/textView37"
                android:onClick="onClick"/>
        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        >


        <TextView
            android:id="@+id/tvBodyweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_body_weight"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/tvBodyweightNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg_selector"
            android:clickable="true"
            android:focusable="false"
            android:maxLength="20"
            android:text="97.5KG  "
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button_save"
            android:layout_centerHorizontal="true"
            android:text="@string/b_edit_exercises"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/button_edit"
            android:layout_toRightOf="@+id/button_edit"
            android:background="@color/colorPrimary"
            android:text="@string/b_finish"
            android:textColor="#FFF"/>


    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:ems="10"
        android:textColor="@color/white"
        android:background="@color/black"
        android:inputType="date"
        android:id="@+id/et_date"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
